samples/_failures_safe/1761560635_6d00c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f35d79a.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_7f35d79a.c:150:5: error: expected expression at end of input
  150 |     int length = lexer->position -
      |     ^~~
./samples/SAFE/__tmp_7f35d79a.c:150:5: error: expected declaration or statement at end of input
